Replace most uses of old dump API